# hitide-backfill-tool

./: .gitignore  .pylintrc  CHANGELOG.md  README.md  memory_profiler.py  pyproject.toml
.github/workflows/: .release-created.yml  ami.yml  build.yml  carpathia_ansible.yml
carpathia/ansible/: site.yml
carpathia/ansible/roles/hitide-backfill-tool/tasks/: main.yml
carpathia/ansible/roles/hitide-backfill-tool/tasks/vars/: hitide.yml
carpathia/ansible/roles/pipx/tasks/: main.yml
carpathia/terraform/: .terraform.lock.hcl  install.tf  main.tf  permission.tf  variables.tf
carpathia/terraform/environments/: ops.env  sit.env  uat.env
carpathia/terraform/tfvars/: ops.tfvars  sit.tfvars  uat.tfvars
podaac/hitide_backfill_tool/: __init__.py  args.py  cli.py  cnm_message_writer.py  config.py  config_creator.py  default_message_config.json  dmrpp_utils.py  failed_workflow.py  file_util.py  memory_profiler.py  regression.py  replay.py  s3_reader.py  sns_message_sender.py
podaac/hitide_backfill_tool/cmr/: cmr_granule.py  helpers.py  search.py
terraform-deploy/: backfill_lambdas.tf  backfill_metadata.tf  cloudwatch_event_post_sqs.tf  database.tf  dmrpp.tf  dmrpp_workflow.tf  ecs_cluster.tf  ecs_cluster_instance_autoscaling_cf_template.yml.tmpl  fargate.tf  forge.tf  forge_py.tf  forge_step.tf  hyrax-metadata-updates.tf  iam.tf  iam_step.tf  lambda_layer.tf  lambda_retry.tf  main.tf  metadata_aggregator.tf  network.tf  override.py  post_to_cmr.tf  postworkflow_normalizer.tf  role_mappings.tf  s3.tf  sns_sqs_step.tf  terraform.tf  tig.tf  tig_step.tf  variable.tf
terraform-deploy/terraform_env/: ops.json  sit.json  uat.json
terraform-deploy/tfvars/: ops.tfvars  sit.tfvars  uat.tfvars
tests/: test_args.py  test_env_url.py  test_file_util.py  test_granule_functions.py  test_running_the_backfill_tool.py  test_searching_cmr.py
tests/resources/: cmr_search_test_granules.json  default_message_config.json  sample.nc.dmrpp  sample_granules_1.json
tests/resources/cumulus_configurations/uat/: MODIS_A-JPL-L2P-v2019.0.json
